--- a/html/header.html
+++ b/html/header.html
@@ -4,6 +4,27 @@
     <title><?php echo $title; ?></title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/chat.css" rel="stylesheet" type="text/css">
+    <link href="css/chat.css" rel="stylesheet"/>
+    <script src="js/jquery-1.6.4.min.js"></script>
+    <script src="js/jquery-ui-1.11.4.js"></script>
+    <script src="js/jquery.signalR-2.2.0.js"></script>
+    <script src="js/json2.js"></script>    
+    <script src="js/jquery.tmpl.js"></script>
+    <script src="js/jquery.cookie.js" type="text/javascript"></script>
+    <script src="http://chat20160216024815.azurewebsites.net//signalr/hubs"></script>
+    <script src="js/vClassroom.js"></script>
+    <script id="new-message-template" type="text/x-jquery-tmpl">
+        <li class="message" id="m-${id}">
+            <strong>${name}:</strong>
+            {{html message}}
+        </li>
+    </script>
+    <script id="new-user-template" type="text/x-jquery-tmpl">
+        <li class="user" id="u-${name}">
+            <img src="http://www.gravatar.com/avatar/${hash}?s=16&d=mm" class="gravatar"/> ${name}
+        </li>
+    </script>
 </head>
 
 <body>
