endret klassenavn i div filer for terminal

--- a/html/cssConsole.html
+++ b/html/cssConsole.html
@@ -1,31 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Terminal form</title>
-	<meta charset="utf-8">
-<link href="cssConsole.css" type="text/css" rel="stylesheet">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+
+
+<link href="css/cssConsole.css" type="text/css" rel="stylesheet">
 <script src="js/cssConsole.js"></script>
 
 </head>
 
-<body>
-	<div class="container">
-		<div class="console">
-			<div class="line white">Welcome to WeLearn.Codes - GIT tutorial! Type help for command list.</div>
+
+	<div class="containerConsole">
+		<div class="consoleConsole">
+			<div class="lineConsole whiteConsole">Welcome to WeLearn.Codes - GIT tutorial! Type help for command list.</div>
 		</div>
-		<div class="bottom">
-			<div class="label">></div>
-			<div id="input"></div>
+		<div class="bottomConsole">
+			<div class="labelConsole">></div>
+			<div id="inputConsole"></div>
 		</div>
 	</div> 
 
-<script src="js/cssConsoleCmd.js"></script>
+
   
-</body>
-
-
-</html>
 
 
 
