--- a/html/header.html
+++ b/html/header.html
@@ -6,6 +6,7 @@
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <link href="css/chat.css" rel="stylesheet" type="text/css">
     <link href="css/chat.css" rel="stylesheet"/>
+    <link href="css/cssConsole.css" type="text/css" rel="stylesheet">
     <script src="js/jquery-1.6.4.min.js"></script>
     <script src="js/jquery-ui-1.11.4.js"></script>
     <script src="js/jquery.signalR-2.2.0.js"></script>
@@ -15,6 +16,7 @@
     <script src="http://chat20160216024815.azurewebsites.net//signalr/hubs"></script>
     <script src="js/vClassroom.js"></script>
     <script id="new-message-template" type="text/x-jquery-tmpl">
+    <script src="js/cssConsole.js"></script>
         <li class="message" id="m-${id}">
             <strong>${name}:</strong>
             {{html message}}
