--- a/html/main.html
+++ b/html/main.html
@@ -1,7 +1,7 @@
  <!--<iframe src="http://chat20160216024815.azurewebsites.net/"></iframe>
  -->
  
-  <div id="chat-area">
+<!--   <div id="chat-area">
         <ul id="messages"></ul>
         <ul id="users"></ul>
         <div class="clear">
@@ -10,4 +10,4 @@
             <input type="text" id="new-message" />
             <input type="submit" id="send" value="Send" class="send" />
         </form>
-    </div>
+    </div> -->
