--- a/html/header.html
+++ b/html/header.html
@@ -11,7 +11,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="js/jquery-ui-1.11.4.js"></script>
     <script src="js/jquery.signalR-2.2.0.js"></script>
-    <script src="js/json2.js"></script>    
+    <script src="js/json2.js"></script>
     <script src="js/jquery.tmpl.js"></script>
     <script src="js/jquery.cookie.js" type="text/javascript"></script>
     <script src="http://chat20160216024815.azurewebsites.net//signalr/hubs"></script>
@@ -28,7 +28,9 @@
         </li>
     </script>
     <script src="js/cssConsole.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 
 <body>
-    <main class="container">
+    <main class="container-fluid">
