--- a/html/main.html
+++ b/html/main.html
@@ -1,6 +1,33 @@
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Lær Github</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Hjem</a></li>
+      <li><a href="#">Init</a></li>
+      <li><a href="#">Status</a></li>
+      <li><a href="#">Add</a></li>
+      <li><a href="#">Commit</a></li>
+      <li><a href="#">Clone</a></li>
+      <li><a href="#">Pull</a></li>
+    </ul>
+  </div>
+</nav>
+<div class="row">
+    <div class="col-md-12">
+<div class="progress">
+ <div class="progress-bar" role="progressbar" aria-valuenow="70"
+ aria-valuemin="0" aria-valuemax="100" style="width:70%"> <!-- Funksjon som hadde vært kult å bruke -->
+   70%
+ </div>
+</div>
+</div>
+</div>
+
  <!--<iframe src="http://chat20160216024815.azurewebsites.net/"></iframe>
  -->
- 
+
 <!--   <div id="chat-area">
         <ul id="messages"></ul>
         <ul id="users"></ul>
@@ -11,3 +38,7 @@
             <input type="submit" id="send" value="Send" class="send" />
         </form>
     </div> -->
+
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-8">
