Liten design endering++

--- a/html/header.html
+++ b/html/header.html
@@ -34,3 +34,19 @@
 
 <body>
     <main class="container-fluid">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">Lær Github</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Hjem</a></li>
+            <li><a href="#">Init</a></li>
+            <li><a href="#">Status</a></li>
+            <li><a href="#">Add</a></li>
+            <li><a href="#">Commit</a></li>
+            <li><a href="#">Clone</a></li>
+            <li><a href="#">Pull</a></li>
+          </ul>
+        </div>
+      </nav>
