lagt term ut i iframe

--- a/html/cssConsole.html
+++ b/html/cssConsole.html
@@ -1,16 +1,8 @@
+<div class="row">
 
+<iframe src="./term/console.html" width="600" height="300 ></iframe>
 
-
-
-	<div class="containerConsole">
-		<div class="consoleConsole">
-			<div class="lineConsole whiteConsole">Welcome to WeLearn.Codes - GIT tutorial! Type help for command list.</div>
-		</div>
-		<div class="bottomConsole">
-			<div class="labelConsole">></div>
-			<div id="inputConsole"></div>
-		</div>
-	</div> 
+</div>
 
 
   
