--- a/html/console.html
+++ b/html/console.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div>
 
-<iframe src="./term/console.html" width="600" height="300 ></iframe>
+<iframe src="./term/console.html" ></iframe>
 
 </div>
 
