--- a/html/git-push.html
+++ b/html/git-push.html
@@ -1,4 +1,6 @@
 
+</div>
+<div class="row">
 <h1>Git Push</h1>
 <hr>
 <p>You will now have the ability to push your git repository to an external git provider. Most commenly used https://github.com. </p>
@@ -11,3 +13,5 @@
 git remote add origin https://github.com/user/test.git
 git push -u origin master</pre>
 <p>You can now check your repository online in a web browser by going to https://github.com/user/test.git.</p>
+
+</div>
