--- a/html/cssConsole.html
+++ b/html/cssConsole.html
@@ -71,7 +71,7 @@ margin-bottom:2px;
 
 	<div class="containerConsole">
 		<div class="console">
-			<div class="line white">Welcome to cssConsole! Type help for command list.</div>
+			<div class="line white">Welcome to Git Learning Consol! Type 'git help' for command list.</div>
 		</div>
 		<div class="bottom">
 			<div class="label">></div>
@@ -95,7 +95,7 @@ $('#input').cssConsole({
 	}
 });
 
-var lineLimit = 28;
+var lineLimit = 14;
 
 $('.containerConsole').on('click', function() {
 	$('#input').find('input').focus();
@@ -119,12 +119,67 @@ function execCommand(command){
 }
 
 var commands = {
-	help: function (){
+	"git help": function (){
 		addLine("Available command list:");
-		addLine("dir", 'margin');
-		addLine("help", 'margin');
-		addLine("ps", 'margin');
+		addLine("Type `git help 'name' to find out more about the function `name'.");
+		addLine("git init", 'margin');
+		addLine("git status", 'margin');
+		addLine("git add", 'margin');
+		addLine("git commit", 'margin');
+		addLine("git clone", 'margin');
+		addLine("git pull", 'margin');
 	},
+
+	"git help init": function (){
+		addLine("Command description:");
+		addLine("$ git init [project-name]", 'margin');
+		addLine("Creates a new local repository with the specified name.");
+	},
+
+	"git help status": function (){
+		addLine("Command description:");
+		addLine("$ git status", 'margin');
+		addLine("Lists all new or modified files to be commited.");
+	},
+
+	"git help add": function (){
+		addLine("Command description:");
+		addLine("$ git add [file]", 'margin');
+		addLine("Snapshots the file in preparation for versioning.");
+	},
+
+	"git help commit": function (){
+		addLine("Command description:");
+		addLine("$ git commit -m [descriptive message]", 'margin');
+		addLine("Records file snapshots permanently in version history.");
+	},
+
+	"git help clone": function (){
+		addLine("Command description:");
+		addLine("$ git clone [url]", 'margin');
+		addLine("Downloads a project and its entire version history.");
+	},
+
+	"git help pull": function (){
+		addLine("Command description:");
+		addLine("$ git pull", 'margin');
+		addLine("Downloads bookmark history and incorporates changes.");
+	},
+
+	"git init": function (){
+		addLine("Initialized empty Git repository in /home/root/.git/");
+	},
+
+	"git status": function (){
+		addLine("On branch master");
+		addLine("Initial commit", 'margin');
+		addLine(" ", 'margin');
+		addLine("Untracked files:");
+		addLine("./html",'margin');
+		addLine("./html/index.html",'margin');
+		addLine(' (use "git add <file>..." to include in what will be committed) ');
+	},
+
 	dir: function(){
 		addLine(".");
 		addLine("..");
