--- a/html/main.html
+++ b/html/main.html
@@ -13,6 +13,6 @@
         </form>
     </div> -->
 
-    <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-8">
+    <div class="container">
+      <div class="row">
+      
