--- a/html/header.html
+++ b/html/header.html
@@ -4,7 +4,7 @@
     <title><?php echo $title; ?></title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
-    <link href="./term/cssConsole.console.css" type="text/css" rel="stylesheet">
+    <link href="./css/cssConsole.console.css" type="text/css" rel="stylesheet">
     <!--<link href="css/chat.css" rel="stylesheet" type="text/css">
     <link href="css/chat.css" rel="stylesheet"/>
     <script src="js/jquery-1.6.4.min.js"></script>
