--- a/html/scripts.html
+++ b/html/scripts.html
@@ -1,3 +1,3 @@
 </div>
 <script src="js/app.js"></script>
-<script src="term/cssConsole.min.js"></script>
+<!--<script src="term/cssConsole.min.js"></script>-->
