--- a/html/header.html
+++ b/html/header.html
@@ -3,8 +3,8 @@
 <head>
     <title><?php echo $title; ?></title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href="./css/style.css" rel="stylesheet" type="text/css">
-    <link href="./term/cssConsole.console.css" type="text/css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/term/cssConsole.console.css" type="text/css" rel="stylesheet">
     <!--<link href="css/chat.css" rel="stylesheet" type="text/css">
     <link href="css/chat.css" rel="stylesheet"/>
     <script src="js/jquery-1.6.4.min.js"></script>
@@ -30,23 +30,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <base href="http://localhost/e-learing/" target="_self" /> <!--se denne siden vis problemer http://stackoverflow.com/questions/1889076/is-it-recommended-to-use-the-base-html-tag -->
 </head>
 
 <body>
-    <main class="container-fluid">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">Lær Github</a>
-          </div>
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Hjem</a></li>
-            <li><a href="#">Init</a></li>
-            <li><a href="#">Status</a></li>
-            <li><a href="#">Add</a></li>
-            <li><a href="#">Commit</a></li>
-            <li><a href="#">Clone</a></li>
-            <li><a href="#">Pull</a></li>
-          </ul>
-        </div>
-      </nav>
+  <main class="container-fluid">
