--- a/html/git-init.html
+++ b/html/git-init.html
@@ -1,23 +1,47 @@
-<div class="row">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-13">
-  <h1>Git Init</h1>
-<hr>
-<p>
-"git init" is the first command for getting started with your very own repository.
-When you type in this command in your command line interface you will create a repository in the directory you are currently in when pressing enter.
-</p>
+<body>
+	<header class=navbar-inverse>
+	<div class="container-fluid">
+	  <!-- Brand and toggle get grouped for better mobile display -->
+	  <div class="navbar-header">
+	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	      <span class="sr-only">Toggle navigation</span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <a class="navbar-brand" href="#">Git E-learning</a>
+	  </div>
 
-<h4>Ex</h4>
+	  	<!-- Collect the nav links, forms, and other content for toggling -->
+	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		    <ul class="nav navbar-nav">
+		      <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+		      <li><a href="#">Link</a></li>
+	 	</div><!-- /.navbar-collapse -->
+	</header>  
+</body>
 
-<pre>
-git init
-</pre>
+<div class=container>
+	<?php include('../html/cssConsole.html'); ?>
+	<div class="row">
+	  	<h1>Git Init</h1>
+		<hr>
+		<p>
+		"git init" is the first command for getting started with your very own repository.
+		When you type in this command in your command line interface you will create a repository in the directory you are currently in when pressing enter.
+		</p>
 
-<p>
-  This will create a hidden file(.git) with all the basic information about your git repository will be stored.
-</p>
-<p>
-  You are now ready to start adding files to your repository.
-</p>
+		<h4>Ex</h4>
+
+		<pre>
+		git init
+		</pre>
+
+		<p>
+		  This will create a hidden file(.git) with all the basic information about your git repository will be stored.
+		</p>
+		<p>
+		  You are now ready to start adding files to your repository.
+		</p>
+	</div>
 </div>
