--- a/html/git-push.html
+++ b/html/git-push.html
@@ -1,17 +1,40 @@
+<body>
+	<header class=navbar-inverse>
+	<div class="container-fluid">
+	  <!-- Brand and toggle get grouped for better mobile display -->
+	  <div class="navbar-header">
+	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	      <span class="sr-only">Toggle navigation</span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <a class="navbar-brand" href="#">Git E-learning</a>
+	  </div>
 
-</div>
-<div class="row">
-<h1>Git Push</h1>
-<hr>
-<p>You will now have the ability to push your git repository to an external git provider. Most commenly used https://github.com. </p>
-<p>You will have to create an account and a new repository with the same name. </p>
-<p>Once this is done you are ready to push your repository to the external provider.</p>
+	  	<!-- Collect the nav links, forms, and other content for toggling -->
+	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		    <ul class="nav navbar-nav">
+		      <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+		      <li><a href="#">Link</a></li>
+	 	</div><!-- /.navbar-collapse -->
+	</header>  
+</body>
 
-<h4>Ex</h4>
+<div class=container>
+	<?php include('../html/cssConsole.html'); ?>
+		<div class="row">
+		<h1>Git Push</h1>
+		<hr>
+		<p>You will now have the ability to push your git repository to an external git provider. Most commenly used https://github.com. </p>
+		<p>You will have to create an account and a new repository with the same name. </p>
+		<p>Once this is done you are ready to push your repository to the external provider.</p>
 
-    <pre>
-git remote add origin https://github.com/user/test.git
-git push -u origin master</pre>
-<p>You can now check your repository online in a web browser by going to https://github.com/user/test.git.</p>
+		<h4>Ex</h4>
 
-</div>
+		    <pre>
+		git remote add origin https://github.com/user/test.git
+		git push -u origin master</pre>
+		<p>You can now check your repository online in a web browser by going to https://github.com/user/test.git.</p>
+		</div>
+<div>
