--- a/html/main.html
+++ b/html/main.html
@@ -12,25 +12,71 @@
             <input type="submit" id="send" value="Send" class="send" />
         </form>
     </div> -->
-    <div class="row">
-      <div class="col-sm-6"><h1>Intro til git</h1></div>
-    <div class="row">
-      <div class="col-sm-7">På denne siden kan du lære å bruke komadnoer som: <br> init <br> merge <br> pull <br> og mye mer</div>
-      <div class="col-sm-7"> <!--- Hær skal det sette inn vedio om Gittttt ---> video skal hit</div>
+
+  <body>
+  <header class=navbar-inverse>
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Git E-learning</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link</a></li>
+       </div><!-- /.navbar-collapse -->
+  </header>  
+  </body>
+  
+
+
+
+    <div class=container>
+      <?php include('html/cssConsole.html'); ?>
+
+      <div class="row">
+        <div class="col-sm-12"><h1>Information about GitHub</h1></div>
+        <div class="col-sm-6">
+          <p>Git is a community built on Git, an open source project started by Linux creator Linus Torvalds. a trainer at GitHub, explains that Git, like other version control systems, manages and stores revisions of projects.</p>
+
+          <p>It is mostly used for code, but it coudl be used to manage any other type of file. It can be compared to a filing system for every draft of a document.</p>
+        </div>
+
+         <div class="col-sm-6"> 
+          <p>Github is a Git repository hosting service, but it has many other features. Git is originally a command line tool, Github also provides a Web-based graphical interface alongside alot of other handy fetures.<p>
+
+          <p>Perhaps most importantly, GitHub has become the biggest library for code examples. Since Git encourages granular recording of changes, programmers, be they absolute beginners or experts, can trace the steps of some of the greatest developers in the world and find out how they solved their problems.</p>
+        </div>
+      </div>
+    </div>
+      
 
 
 
 
+          <!--- Hær skal det sette inn vedio om Gittttt --> 
 
 
 
-
-
-
-    <div class="row">
+<div class="row">
       <div class="col-sm-4"></div>
       <div class="col-sm-4">
         <button type="button" class="btn btn-success btn-block">Start</button>
       </div>
       <div class="col-sm-4"></div>
-   </div>
+</div>
+
+
+
+
+
+
+    
