--- a/html/git-commit.html
+++ b/html/git-commit.html
@@ -1,4 +1,33 @@
+<body>
+	<header class=navbar-inverse>
+	<div class="container-fluid">
+	  <!-- Brand and toggle get grouped for better mobile display -->
+	  <div class="navbar-header">
+	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	      <span class="sr-only">Toggle navigation</span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <a class="navbar-brand" href="#">Git E-learning</a>
+	  </div>
 
+	  	<!-- Collect the nav links, forms, and other content for toggling -->
+	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		    <ul class="nav navbar-nav">
+		      <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+		      <li><a href="#">Link</a></li>
+	 	</div><!-- /.navbar-collapse -->
+	</header>  
+</body>
+
+<div class=container>
+	<?php include('../html/cssConsole.html'); ?>
+	<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-13">
+  <h1>Git Init</h1>
+<hr>
 <h1>Git commit</h1>
 <hr>
 
