--- a/html/git-pull.html
+++ b/html/git-pull.html
@@ -1,10 +1,38 @@
-<h1>Git Pull</h1>
-<hr>
+<body>
+	<header class=navbar-inverse>
+	<div class="container-fluid">
+	  <!-- Brand and toggle get grouped for better mobile display -->
+	  <div class="navbar-header">
+	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	      <span class="sr-only">Toggle navigation</span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <a class="navbar-brand" href="#">Git E-learning</a>
+	  </div>
 
-<p>When you have added your repositry to git you will have the option to pull changes. This comes in handy
-when other colabirators have added code to your repository.</p>
+	  	<!-- Collect the nav links, forms, and other content for toggling -->
+	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		    <ul class="nav navbar-nav">
+		      <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+		      <li><a href="#">Link</a></li>
+	 	</div><!-- /.navbar-collapse -->
+	</header>  
+</body>
 
-<p>Ex:</p>
-<pre>git pull</pre>
+<div class=container>
+	<?php include('../html/cssConsole.html'); ?>
+	<div class="row">
+		<h1>Git Pull</h1>
+		<hr>
 
-<p>The added code will the be merged with your files.</p>
+		<p>When you have added your repositry to git you will have the option to pull changes. This comes in handy
+		when other colabirators have added code to your repository.</p>
+
+		<p>Ex:</p>
+		<pre>git pull</pre>
+
+		<p>The added code will the be merged with your files.</p>
+	</div>
+</div>
