lagt til funksjonalitet

--- a/html/cssConsole.html
+++ b/html/cssConsole.html
@@ -194,7 +194,7 @@ var commands = {
 
 			'git add test.txt': function (){
 		addLine("test");
-		window.location.href = "http://google.com";
+		window.location.href = "http://localhost/e-learning/Steg/add.php";
 	},
 		"cat test.txt": function (){
 		addLine("This is one line");
