lagt til alert/popup

--- a/html/cssConsole.html
+++ b/html/cssConsole.html
@@ -194,6 +194,7 @@ var commands = {
 
 			'git add test.txt': function (){
 		addLine("test");
+		alert("Success! You have initiated an empty git repository. Press OK to continue");
 		window.location.href = "http://localhost/e-learning/Steg/add.php";
 	},
 		"cat test.txt": function (){
