--- a/html/git-add.html
+++ b/html/git-add.html
@@ -1,5 +1,5 @@
 <body>
-	<header class=navbar-inverse>
+	<header class=navbar-default>
 	<div class="container-fluid">
 	  <!-- Brand and toggle get grouped for better mobile display -->
 	  <div class="navbar-header">
@@ -15,8 +15,13 @@
 	  	<!-- Collect the nav links, forms, and other content for toggling -->
 	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		    <ul class="nav navbar-nav">
-		      <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-		      <li><a href="#">Link</a></li>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">init</a>
+		      <li class="active" style="pointer-events: none; cursor: default;"><a href="#">add<span class="sr-only">(current)</span></a></li>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">status</a>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">commit</a>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">push</a>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">pull</a>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">clone</a>
 	 	</div><!-- /.navbar-collapse -->
 	</header>  
 </body>
@@ -24,8 +29,6 @@
 <div class=container>
 	<?php include('../html/cssConsole.html'); ?>
 	<div class="row">
-		<h1>Git Init</h1>
-		<hr>
 
 		<h1>Git Add</h1>
 		<hr>
