--- a/html/git-push.html
+++ b/html/git-push.html
@@ -1,5 +1,5 @@
 <body>
-	<header class=navbar-inverse>
+	<header class=navbar-default>
 	<div class="container-fluid">
 	  <!-- Brand and toggle get grouped for better mobile display -->
 	  <div class="navbar-header">
@@ -15,8 +15,14 @@
 	  	<!-- Collect the nav links, forms, and other content for toggling -->
 	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		    <ul class="nav navbar-nav">
-		      <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-		      <li><a href="#">Link</a></li>
+		      <ul class="nav navbar-nav">
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">init</a>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">add</a>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">status</a>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">commit</a>
+		      <li class="active" style="pointer-events: none; cursor: default;"><a href="#">push<span class="sr-only">(current)</span></a></li>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">pull</a>
+		      <li><a style="pointer-events: none; cursor: default;" href="page.html">clone</a>
 	 	</div><!-- /.navbar-collapse -->
 	</header>  
 </body>
