--- a/html/git-init.html
+++ b/html/git-init.html
@@ -39,9 +39,7 @@
 
 		<h4>Ex</h4>
 
-		<pre>
-		git init
-		</pre>
+		<pre>git init</pre>
 
 		<p>
 		  This will create a hidden file(.git) with all the basic information about your git repository will be stored.
