--- a/html/git-clone.html
+++ b/html/git-clone.html
@@ -1,4 +1,4 @@
-body>
+<body>
 	<header class=navbar-default>
 	<div class="container-fluid">
 	  <!-- Brand and toggle get grouped for better mobile display -->
