fiksa på forside og footer

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,5 @@
     </main>
-    <footer id="footer" class="navbar navbar-inverse navbar-fixed-bottom">
+    <footer id="footer" class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-text pull-left">
 <p>
   Testing
