--- a/html/main.html
+++ b/html/main.html
@@ -45,7 +45,6 @@
 
 
     <div class=container>
-      <?php include('html/cssConsole.html'); ?>
 
       <div class="row">
         <div class="col-sm-12"><h1>Information about GitHub</h1></div>
@@ -60,24 +59,17 @@
 
           <p>Perhaps most importantly, GitHub has become the biggest library for code examples. Since Git encourages granular recording of changes, programmers, be they absolute beginners or experts, can trace the steps of some of the greatest developers in the world and find out how they solved their problems.</p>
         </div>
-      </div>
-    </div>
+        </div>
+        
+        <div style="text-align: center; margin-bottom: 10em">
+          <img src="img/git.png" alt="Git Logo"> 
+          <img src="img/github.png" alt="GitHub Logo">
+        <div>
       
 
-
-
-
-          <!--- Hær skal det sette inn vedio om Gittttt --> 
-
-
-
-<div class="row">
-      <div class="col-sm-4"></div>
-      <div class="col-sm-4">
-        <button type="button" class="btn btn-success btn-block">Start</button>
-      </div>
-      <div class="col-sm-4"></div>
-</div>
+        <div class="row" style="text-align: center; padding-bottom: 10em">
+                <button type="button" class="btn btn-success btn-block" style="text-align: center; margin-top: 10em">Start</button>
+        </div>
 
 
 
