--- a/html/footer.html
+++ b/html/footer.html
@@ -1,10 +1,10 @@
-    </main>
-    <footer id="footer" class="navbar navbar-default navbar-fixed-bottom">
-<div class="navbar-text pull-left">
-<p>
-  Testing
-</p>
-</div>
-    </footer>
-</body>
-</html>
+<!---</main>-->
+<!---<footer id="footer" class="navbar navbar-default navbar-fixed-bottom">-->
+<!---<div class="navbar-text pull-left">-->
+<!---<p>-->
+<!---Testing-->
+<!---</p>-->
+<!---</div>-->
+<!---</footer>-->
+<!---</body>-->
+<!---</html>-->
