--- a/html/main.html
+++ b/html/main.html
@@ -47,7 +47,7 @@
     <div class=container>
 
       <div class="row">
-        <div class="col-sm-12"><h1>Information about GitHub</h1></div>
+        <div class="col-sm-12"><h1 class="text-center">Information about GitHub</h1></div>
         <div class="col-sm-6">
           <hr>
           <p>Git is a community built on Git, an open source project started by Linux creator Linus Torvalds. a trainer at GitHub, explains that Git, like other version control systems, manages and stores revisions of projects.</p>
