--- a/html/main.html
+++ b/html/main.html
@@ -69,7 +69,7 @@
         <div>
       
 
-        <div class="row" style="text-align: center; padding-bottom: 10em">
+        <div class="row">
                 <button type="button" class="btn btn-success btn-block" style="text-align: center; margin-top: 10em">Start</button>
         </div>
 
