Midlertidig linking av knappen i main.html

--- a/html/main.html
+++ b/html/main.html
@@ -70,7 +70,7 @@
       
 
         <div class="row">
-                <button type="button" class="btn btn-success btn-block" style="text-align: center; margin-top: 10em">Start</button>
+                <a href="Steg/" type="button" class="btn btn-success btn-block" style="text-align: center; margin-top: 10em">Start</a>
         </div>
 
 
