Fikset litt formatering og typoes

--- a/html/git-commit.html
+++ b/html/git-commit.html
@@ -29,17 +29,15 @@
 <div class=container>
 	<?php include('../html/cssConsole.html'); ?>
 	<div class="row">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-13">
-  <h1>Git Init</h1>
-<hr>
-<h1>Git commit</h1>
-<hr>
+	  	<h1>Git Commit</h1>
+		<hr>
 
-<p>Saving changes - <pre>git commit</pre> stores the current contents/snapshot of the index in a new commit along with a log message from the user describing the changes. Commited changes are "safe" snapshots of the project - Git will never change them unless ask it to.</p>
+		<p>Saving changes - git commit stores the current contents/snapshot of the index in a new commit along with a log message from the user describing the changes. Commited changes are "safe" snapshots of the project - Git will never change them unless ask it to.</p>
 
-<p>Ex:</p>
-<pre>git commit -m "message"</pre>
+		<p>Ex:</p>
+		<pre>git commit -m "message"</pre>
 
-<p>Commit the staged snapshot, but instead of launching a text editor, use message to commit the message.</p>
+		<p>Commit the staged snapshot, but instead of launching a text editor, use message to commit the message.</p>
+	</div>
+</div>
 
