--- a/html/git-push.html
+++ b/html/git-push.html
@@ -33,14 +33,12 @@
 		<h1>Git Push</h1>
 		<hr>
 		<p>You will now have the ability to push your git repository to an external git provider. Most commenly used https://github.com. </p>
-		<p>You will have to create an account and a new repository with the same name. </p>
+		<p>You have to create an account and a new repository with the same name. </p>
 		<p>Once this is done you are ready to push your repository to the external provider.</p>
 
 		<h4>Ex</h4>
-
-		    <pre>
-		git remote add origin https://github.com/user/test.git
-		git push -u origin master</pre>
+		<pre>git remote add origin https://github.com/user/test.git</pre>
+		<pre>git push -u origin master</pre>
 		<p>You can now check your repository online in a web browser by going to https://github.com/user/test.git.</p>
 		</div>
 <div>
