--- a/html/git-init.html
+++ b/html/git-init.html
@@ -32,20 +32,14 @@
 	<div class="row">
 	  	<h1>Git Init</h1>
 		<hr>
-		<p>
-		"git init" is the first command for getting started with your very own repository.
-		When you type in this command in your command line interface you will create a repository in the directory you are currently in when pressing enter.
-		</p>
+		<p>"git init" is the first command for getting started with your very own repository.
+		When you type in this command in your command line interface you will create a repository in the directory you are currently in when pressing enter.</p>
 
 		<h4>Ex</h4>
 
 		<pre>git init</pre>
 
-		<p>
-		  This will create a hidden file(.git) with all the basic information about your git repository will be stored.
-		</p>
-		<p>
-		  You are now ready to start adding files to your repository.
-		</p>
+		<p>This will create a hidden file(.git) with all the basic information about your git repository will be stored.</p>
+		<p>You are now ready to start adding files to your repository.</p>
 	</div>
 </div>
