lagt til youtube.php steg og fikset linking på knapper

--- a/html/main.html
+++ b/html/main.html
@@ -44,7 +44,7 @@
 
 
 
-    <div class=container>
+    <div class="container">
 
       <div class="row">
         <div class="col-sm-12"><h1 class="text-center">Information about GitHub</h1></div>
@@ -61,17 +61,17 @@
 
           <p>Perhaps most importantly, GitHub has become the biggest library for code examples. Since Git encourages granular recording of changes, programmers, be they absolute beginners or experts, can trace the steps of some of the greatest developers in the world and find out how they solved their problems.</p>
         </div>
-        </div>
         
         <div style="text-align: center; margin-bottom: 10em">
           <img src="img/git.png" alt="Git Logo"> 
           <img src="img/github.png" alt="GitHub Logo">
-        <div>
+        </div>
       
 
         <div class="row">
-                <a href="Steg/" type="button" class="btn btn-success btn-block" style="text-align: center; margin-top: 10em">Start</a>
+                <a href="Steg/youtube.php" type="button" class="btn btn-success btn-block" style="text-align: center; margin-top: 6em">Start</a>
         </div>
+      </div>
 
 
 
