Rettet litt forklaring for å komme videre i terminalen

--- a/html/cssConsole.html
+++ b/html/cssConsole.html
@@ -245,7 +245,7 @@ var commands = {
 	},5000);
 	},
 
-			'git clone': function (){
+			'git clone https://github.com/welearncodes/e-learning.git': function (){
 		addLine("Cloning into test...", 'margin');
 		addLine("remote: Total 12 (delta 10), reused 2 (delta 1), pack-reused 1", 'margin');
 		addLine("remote: Counting objects: 526, done.",'margin');
