--- a/html/git-push.html
+++ b/html/git-push.html
@@ -37,8 +37,7 @@
 		<p>Once this is done you are ready to push your repository to the external provider.</p>
 
 		<h4>Ex</h4>
-		<pre>git remote add origin https://github.com/user/test.git</pre>
-		<pre>git push -u origin master</pre>
-		<p>You can now check your repository online in a web browser by going to https://github.com/user/test.git.</p>
+		<pre>git push</pre>
+
 		</div>
 <div>
