--- a/html/git-commit.html
+++ b/html/git-commit.html
@@ -35,7 +35,7 @@
 		<p>Saving changes - git commit stores the current contents/snapshot of the index in a new commit along with a log message from the user describing the changes. Commited changes are "safe" snapshots of the project - Git will never change them unless ask it to.</p>
 
 		<p>Ex:</p>
-		<pre>git commit -m "message"</pre>
+		<pre>git commit -m "Added new file"</pre>
 
 		<p>Commit the staged snapshot, but instead of launching a text editor, use message to commit the message.</p>
 	</div>
